--- a/HTML/index.html
+++ b/HTML/index.html
@@ -21,7 +21,7 @@
             <li><a href="#carnes">Carnes</a></li>
             <li><a href="#guisos">Guisos</a></li>
             <li><a href="#pasta">Pasta</a></li>
-            <li><a href="#guarnicion">Guarnición</a></li>
+            <li><a href="#verduras">Verduras</a></li>
             <li><a href="#bebidas">Bebidas</a></li>
         </ul>
     </nav>
@@ -253,10 +253,10 @@
                 <p>¡Y listo! Ya tienes unos deliciosos espaguetis a la carbonara. ¡A disfrutar!</p>
             </div>
         </section>
-        <section id="guarnicion">
+        <section id="verduras">
             <h2>Horno</h2>
             <ul>
-                <li><a href="#algo-guarnicion">Titulo de la receta</a></li>
+                <li><a href="#algo-verduras">Titulo de la receta</a></li>
             </ul>
             <div id="algo-guarnicion" class="receta">
                 <h3>Titulo de la receta</h3>
