--- a/HTML/index.html
+++ b/HTML/index.html
@@ -254,7 +254,7 @@
             </div>
         </section>
         <section id="verduras">
-            <h2>Horno</h2>
+            <h2>Verduras</h2>
             <ul>
                 <li><a href="#algo-verduras">Titulo de la receta</a></li>
             </ul>
