--- a/HTML/index.html
+++ b/HTML/index.html
@@ -333,6 +333,7 @@
                 <p>¡Y listo! Ya tienes unos deliciosos -------------. ¡A disfrutar!</p>
             </div>
         </section>
+        <button id="scrollToTopBtn" title="Volver arriba">&#8679;</button>
     </main>
     <script src="../JS/script.js"></script>
 </body>
