--- a/HTML/index.html
+++ b/HTML/index.html
@@ -294,7 +294,7 @@
             </div>
         </section>
         <section id="bebidas">
-            <h2>Cócteles</h2>
+            <h2>Bebidas</h2>
             <ul>
                 <li><a href="#algo-bebidas">Titulo de la receta</a></li>
             </ul>
