--- a/HTML/index.html
+++ b/HTML/index.html
@@ -296,41 +296,39 @@
         <section id="bebidas">
             <h2>Bebidas</h2>
             <ul>
-                <li><a href="#algo-bebidas">Titulo de la receta</a></li>
+                <li><a href="#mojito-fresa">Mojito de fresa</a></li>
             </ul>
-            <div id="algo-bebidas" class="receta">
-                <h3>Titulo de la receta</h3>
+            <div id="mojito-fresa" class="receta">
+                <h3>Mojito de fresa</h3>
                 <p class="custom-p-bold">Ingredientes:</p>
                 <ul class="custom-list">
-                    <li>Primer ingrediente</li>
-                    <li>Segundo ingrediente</li>
-                    <li>Tercer ingrediente</li>
+                    <li>Fresas.</li>
+                    <li>Ron.</li>
+                    <li>Azúcar moreno.</li>
+                    <li>Lima o limones.</li>
+                    <li>Sprite o similar.</li>
+                    <li>Hierbabuena.</li>
+                    <li>Hielo picado.</li>
                 </ul>
                 <p class="custom-p-bold">Elavoración:</p>
                 <ol class="custom-list-order">
-                    <li>Que va ha hacer en este paso:
+                    <li>Preparar el jugo de fresa:
                         <ul>
-                            <li>Primer paso</li>
-                            <li>Segundo paso</li>
-                            <li>Tercer paso</li>
+                            <li>Comenzamos haciendo un jugo base. Para ello, en una licuadora añadimos fresas partidas por la mitad (para facilitar el triturado), entre uno y dos vasos de agua, un buen chorro de ron, el zumo de medio limón o un limón entero (al gusto), azúcar moreno y unas hojas de hierbabuena. Licuamos la mezcla y vamos probándola poco a poco, ajustando la cantidad de fresas y azúcar hasta obtener un jugo de fresa con un sabor ligeramente dulce.</li>
                         </ul>
                     </li>
-                    <li>Que va ha hacer en este paso:
+                    <li>Montar el mojito:
                         <ul>
-                            <li>Primer paso</li>
-                            <li>Segundo paso</li>
-                            <li>Tercer paso</li>
+                            <li>En un vaso grande, echamos azúcar moreno al gusto y lo repartimos uniformemente en el fondo. Añadimos unos trocitos pequeños de fresa, un poco de hielo picado, la cantidad deseada de ron, y luego vertemos el jugo de fresa que preparamos antes. Incorporamos algunas hojas de hierbabuena troceadas y completamos con Sprite o una bebida similar.</li>
                         </ul>
                     </li>
-                    <li>Que va ha hacer en este paso:
+                    <li>Decoración:
                         <ul>
-                            <li>Primer paso</li>
-                            <li>Segundo paso</li>
-                            <li>Tercer paso</li>
+                            <li>Mezclamos ligeramente para integrar los sabores sin mover demasiado el azúcar del fondo. Decoramos con trozos de fresa más grandes, una rodaja de limón y una o dos pajitas.</li>
                         </ul>
                     </li>
                 </ol>
-                <p>¡Y listo! Ya tienes unos deliciosos -------------. ¡A disfrutar!</p>
+                <p>¡Y listo! Ya tienes unos deliciosos mojitos de fresa. ¡A disfrutar!</p>
             </div>
         </section>
         <button id="scrollToTopBtn" title="Volver arriba">&#8679;</button>
