--- a/HTML/index.html
+++ b/HTML/index.html
@@ -70,6 +70,39 @@
                 </ol>
                 <p>¡Y listo! Ya tienes unos deliciosos -------------. ¡A disfrutar!</p>
             </div>
+            <div id="tarta-abuela" class="receta">
+                <h3>Titulo de la receta</h3>
+                <p class="custom-p-bold">Ingredientes:</p>
+                <ul class="custom-list">
+                    <li>Primer ingrediente</li>
+                    <li>Segundo ingrediente</li>
+                    <li>Tercer ingrediente</li>
+                </ul>
+                <p class="custom-p-bold">Elavoración:</p>
+                <ol class="custom-list-order">
+                    <li>Que va ha hacer en este paso:
+                        <ul>
+                            <li>Primer paso</li>
+                            <li>Segundo paso</li>
+                            <li>Tercer paso</li>
+                        </ul>
+                    </li>
+                    <li>Que va ha hacer en este paso:
+                        <ul>
+                            <li>Primer paso</li>
+                            <li>Segundo paso</li>
+                            <li>Tercer paso</li>
+                        </ul>
+                    </li>
+                    <li>Que va ha hacer en este paso:
+                        <ul>
+                            <li>Primer paso</li>
+                            <li>Segundo paso</li>
+                            <li>Tercer paso</li>
+                        </ul>
+                    </li>
+                </ol>
+                <p>¡Y listo! Ya tienes unos deliciosos -------------. ¡A disfrutar!</p>
             </div>
         </section>
         <section id="pescados">
