--- a/HTML/index.html
+++ b/HTML/index.html
@@ -30,79 +30,235 @@
             <h2>Postres</h2>
             <ul>
                 <ul>Tarta:
-                    <li><a href="#tarta-abuela">Titulo de la receta Tarta</a></li>
+                    <li><a href="#pastel-galleta-crema-oreo">Pastel de Galletas y Crema Oreo</a></li>
                 </ul>
                 <ul>Postres:
-                    <li><a href="#tarta-abuela">Titulo de la receta Postres</a></li>
+                    <li><a href="#donuts-fit">Donuts fit</a></li>
+                    <li><a href="#palmeras-de-chocolate-fit">Palmeras de chocolate fit</a></li>
                 </ul>
             </ul>
-            <div id="tarta-abuela" class="receta">
-                <h3>Titulo de la receta</h3>
+            <div id="pastel-galleta-crema-oreo" class="receta">
+                <h3>Pastel de Galletas y Crema Oreo</h3>
                 <p class="custom-p-bold">Ingredientes:</p>
+                <p>Para el bizcocho:</p>
                 <ul class="custom-list">
-                    <li>Primer ingrediente</li>
-                    <li>Segundo ingrediente</li>
-                    <li>Tercer ingrediente</li>
+                    <li>240 gramos de harina de trigo todo uso.</li>
+                    <li>350 gramos de azúcar granulada.</li>
+                    <li>88,5 gramos de cacao oscuro de buena calidad.</li>
+                    <li>8 gramos de bicarbonato de sodio.</li>
+                    <li>3 gramos de levadura química (polvo de hornear).</li>
+                    <li>6 gramos de sal.</li>
+                    <li>240 gramos de buttermilk (suero de leche), a temperatura ambiente.</li>
+                    <li>109 gramos de aceite vegetal.</li>
+                    <li>3 huevos grandes, a temperatura ambiente.</li>
+                    <li>236,6 gramos de agua caliente</li>
+                    <li>4,2 gramos de extracto de vainilla</li>
+                </ul>
+                <p>Para el relleno:</p>
+                <ul class="custom-list">
+                    <li>173 gramos de nata para montar (mínimo 35% MG).</li>
+                    <li>170 gramos de queso crema, ablandado.</li>
+                    <li>250 gramos de azúcar glas, tamizada.</li>
+                    <li>8 galletas Oreo, troceadas.</li>
+                </ul>
+                <p>Para la crema de mantequilla (buttercream) con Oreo:</p>
+                <ul class="custom-list">
+                    <li>6 galletas Oreo, trituradas muy finas.</li>
+                    <li>452 gramos de mantequilla sin sal, ligeramente fría.</li>
+                    <li>750 gramos de azúcar glas, tamizada.</li>
+                    <li>43 gramos de nata para montar.<br>Si deseas hacer decoraciones con manga pastelera, prepara media receta extra.</li>
+                </ul>
+                <p>Para el ganache (drip):</p>
+                <ul class="custom-list">
+                    <li>150 gramos de chispas de chocolate semiamargo.</li>
+                    <li>173–231 gramos de nata para montar.</li>
+                    <li>Colorante en gel negro (opcional)</li>
                 </ul>
                 <p class="custom-p-bold">Elavoración:</p>
                 <ol class="custom-list-order">
-                    <li>Que va ha hacer en este paso:
+                    <li>Bizcocho:
                         <ul>
-                            <li>Primer paso</li>
-                            <li>Segundo paso</li>
-                            <li>Tercer paso</li>
+                            <li>Precalienta el horno a 160 °C. Engrasa y cubre con papel pergamino tres moldes de 20 cm (o cuatro de 15 cm).</li>
+                            <li>En un bol grande, mezcla la harina, azúcar, cacao, bicarbonato, levadura y sal.</li>
+                            <li>En otro bol, bate los huevos con el buttermilk, el agua caliente, el aceite y la vainilla.</li>
+                            <li> Incorpora los ingredientes líquidos a los secos con la batidora a baja velocidad. Mezcla hasta que la masa sea homogénea (unos 30–40 segundos). Raspa los bordes del bol y bate unos segundos más.</li>
+                            <li>Divide la mezcla entre los moldes (aproximadamente 450 ml por molde de 20 cm).</li>
+                            <li>Hornea de 25 a 30 minutos o hasta que un palillo salga con unas pocas migas húmedas.</li>
+                            <li>Deja enfriar 10 minutos en el molde, desmolda y enfría completamente sobre una rejilla. Luego, envuelve bien en plástico film y guarda en la nevera o congela al menos 1 hora.<br>Idealmente, deja reposar el bizcocho al menos un día en nevera. Esto mejora su textura y facilita el montaje.</li>
                         </ul>
                     </li>
-                    <li>Que va ha hacer en este paso:
+                    <li>Relleno:
                         <ul>
-                            <li>Primer paso</li>
-                            <li>Segundo paso</li>
-                            <li>Tercer paso</li>
+                            <li>Monta la nata hasta que forme picos firmes (3–5 minutos). Reserva.</li>
+                            <li>En el mismo bol, bate el queso crema hasta que esté suave y sin grumos.</li>
+                            <li>Añade el azúcar glas poco a poco.</li>
+                            <li>Incorpora la nata montada con movimientos envolventes. Finalmente, añade las Oreo troceadas justo antes de montar la tarta.<br>Puedes preparar esta mezcla con antelación, pero añade las Oreo el mismo día del montaje para evitar que se ablanden.
+</li>
                         </ul>
                     </li>
-                    <li>Que va ha hacer en este paso:
+                    <li>Buttercream de Oreo:
                         <ul>
-                            <li>Primer paso</li>
-                            <li>Segundo paso</li>
-                            <li>Tercer paso</li>
+                            <li>Bate la mantequilla durante 2 minutos a velocidad media-alta.</li>
+                            <li>Añade el azúcar glas poco a poco a velocidad baja. Raspa los bordes del bol.</li>
+                            <li>Agrega la nata, una cucharada a la vez. Cuando esté integrada, bate 5 minutos a velocidad media-alta hasta obtener una textura ligera y cremosa.</li>
+                            <li>Incorpora las migas finas de Oreo. Mezcla suavemente con una espátula para eliminar burbujas de aire.</li>
+                        </ul>
+                    </li>
+                    <li>Ganache:
+                        <ul>
+                            <li>Calienta la nata hasta que hierva suavemente y viértela sobre el chocolate. Deja reposar 5 minutos.</li>
+                            <li>Mezcla hasta que quede suave y brillante. Si es necesario, calienta 30 segundos más.</li>
+                            <li>Añade una gota de colorante negro si quieres un acabado más oscuro.<br>Deja que el ganache se temple antes de verterlo sobre el pastel frío para un acabado perfecto.</li>
+                        </ul>
+                    </li>
+                    <li>Montaje del pastel:
+                        <ul>
+                            <li>Coloca una capa de bizcocho sobre la base o plato.</li>
+                            <li>Haz un anillo de buttercream alrededor del borde y rellena el centro con una taza de crema de Oreo.</li>
+                            <li>Repite con la segunda capa. Finaliza con la tercera capa (al revés, con la parte plana hacia arriba).</li>
+                            <li>Aplica una capa fina de buttercream para sellar las migas (crumb coat). Refrigera 10–15 minutos.</li>
+                            <li>Cubre todo el pastel con el resto de la buttercream. Enfría de nuevo unos 10 minutos.</li>
+                            <li>Aplica el ganache por los bordes con una cuchara o botella de squeeze.</li>
                         </ul>
                     </li>
                 </ol>
-                <p>¡Y listo! Ya tienes unos deliciosos -------------. ¡A disfrutar!</p>
+                <p>¡Y listo! Ya tienes unos deliciosos Pastel de Galletas y Crema Oreo. ¡A disfrutar!</p>
             </div>
-            <div id="tarta-abuela" class="receta">
-                <h3>Titulo de la receta</h3>
-                <p class="custom-p-bold">Ingredientes:</p>
+            <div id="donuts-fit" class="receta">
+                <h3>Donuts fit</h3>
+                <p class="custom-p-bold">Ingredientes (6 unidades aprox.):</p>
                 <ul class="custom-list">
-                    <li>Primer ingrediente</li>
-                    <li>Segundo ingrediente</li>
-                    <li>Tercer ingrediente</li>
+                    <li>100 gramos de harina de avena (podés hacerla triturando copos de avena en licuadora).</li>
+                    <li>30 gramos de proteína en polvo (de sabor vainilla, chocolate, fresa… la que más te guste).</li>
+                    <li>1 huevo mediano.</li>
+                    <li>100 mililitros de leche (puede ser desnatada o vegetal: avena, almendra, soja, etc.).</li>
+                    <li>1 cucharada de levadura química/polvo de hornear (5-6 gramos).</li>
+                    <li>1 cucharada de esencia de vainilla (opcional, para darle más sabor).</li>
+                    <li>Endulzante al gusto (stevia, eritritol, monk fruit, etc.).</li>
+                    <li>Opcional: 1 cucharada de cacao puro sin azúcar o canela.</li>
                 </ul>
                 <p class="custom-p-bold">Elavoración:</p>
                 <ol class="custom-list-order">
-                    <li>Que va ha hacer en este paso:
+                    <li>Preparar los ingredientes secos:
                         <ul>
-                            <li>Primer paso</li>
-                            <li>Segundo paso</li>
-                            <li>Tercer paso</li>
+                            <li>En un bol grande, mezclá: la harina de avena, la proteína en polvo, la levadura y si querés, el cacao o canela. Esto asegura que se repartan bien por toda la masa.</li>
                         </ul>
                     </li>
-                    <li>Que va ha hacer en este paso:
+                    <li>Batir los ingredientes líquidos:
                         <ul>
-                            <li>Primer paso</li>
-                            <li>Segundo paso</li>
-                            <li>Tercer paso</li>
+                            <li>En otro recipiente, bate: el huevo, la leche, la esencia de vainilla y el endulzante (ajustá a tu gusto).</li>
                         </ul>
                     </li>
-                    <li>Que va ha hacer en este paso:
+                    <li>Unir todo:
                         <ul>
-                            <li>Primer paso</li>
-                            <li>Segundo paso</li>
-                            <li>Tercer paso</li>
+                            <li>Verté los líquidos sobre los secos y mezclá bien con una espátula o varillas.</li>
+                            <li>Deberías obtener una mezcla espesa pero fluida. Si está muy seca, añadí un chorrito más de leche.</li>
+                        </ul>
+                    </li>
+                    <li>Verter en los moldes:
+                        <ul>
+                            <li>Usá moldes de silicona para donuts (si no tenés, podés usar moldes para muffins).</li>
+                            <li>Repartí la mezcla de forma equitativa en cada hueco, sin llenarlos hasta arriba (suben un poco con el horneado).</li>
+                        </ul>
+                    </li>
+                    <li>Hornear:
+                        <ul>
+                            <li>Precalentá el horno a 180 °C.</li>
+                            <li>Horneá durante *12-15 minutos*, hasta que al pinchar con un palillo salga limpio.</li>
+                            <li>Sacalos y dejalos enfriar en una rejilla.</li>
+                        </ul>
+                    </li>
+                    <li>Decorar (opcional, pero recomendado):
+                        <ul>
+                            <li>Podés hacer un glaseado fit mezclando: 2 cucharadas de yogur griego, 1 cucharadita de cacao puro y unas gotas de vainilla o endulzante y remueve hasta que quede homogeneo.</li>
+                            <li>Untás un poquito en cada donut y listo. También podés poner coco rallado por encima o chispas sin azúcar.</li>
                         </ul>
                     </li>
                 </ol>
-                <p>¡Y listo! Ya tienes unos deliciosos -------------. ¡A disfrutar!</p>
+                <p>¡Y listo! Ya tienes unos deliciosos Donuts fit. ¡A disfrutar!</p>
+            </div>
+            <div id="palmeras-de-chocolate-fit" class="receta">
+                <h3>Palmeras de chocolate fit</h3>
+                <p class="custom-p-bold">Ingredientes (para 4 palmeritas):</p>
+                <p>Para la masa y relleno:</p>
+                <ul class="custom-list">
+                    <li>1 lámina de masa filo (también puede ser masa brick).</li>
+                    <li>2 cucharadas de proteína en polvo (de chocolate o vainilla).</li>
+                    <li>1 cucharada de cacao puro desgrasado (sin azúcar).</li>
+                    <li>1 cucharadita de edulcorante (stevia, eritritol, etc.).</li>
+                    <li>1 huevo (para pincelar).</li>
+                    <li>Unas gotas de esencia de vainilla (opcional).</li>
+                </ul>
+                <p>Para la cobertura de chocolate:</p>
+                <ul class="custom-list">
+                    <li>2 onzas de chocolate negro sin azúcar (mínimo 85% cacao).</li>
+                    <li>1 cucharadita de proteína en polvo (opcional).</li>
+                    <li>Un chorrito de leche vegetal o desnatada (para que se derrita mejor).</li>
+                </ul>
+                <p class="custom-p-bold">Elavoración:</p>
+                <ol class="custom-list-order">
+                    <li>Paso 1: Prepará el horno
+                        <ul>
+                            <li>Encendé el horno y precalentá a 180 °C (arriba y abajo).</li>
+                        </ul>
+                    </li>
+                    <li>Paso 2: Mezclá los ingredientes secos
+                        <ul>
+                            <li>En un bowl pequeño, poné: 2 cucharadas de proteína en polvo, 1 cucharada de cacao puro, 1 cucharadita de edulcorante y unas gotas de esencia de vainilla si querés.</li>
+                            <li>Mezclá todo bien hasta que quede uniforme.</li>
+                        </ul>
+                    </li>
+                    <li>Paso 3: Extendé la masa
+                        <ul>
+                            <li>Colocá la lámina de masa filo sobre una superficie limpia o papel vegetal.</li>
+                            <li>Si la masa está muy seca, podés pincelarla levemente con agua o aceite de coco para que no se rompa.</li>
+                        </ul>
+                    </li>
+                    <li>Paso 4: Añadí el relleno
+                        <ul>
+                            <li>Espolvoreá por encima toda la mezcla que hiciste (la proteína con cacao y edulcorante).</li>
+                            <li>Extendé bien para que quede repartido por toda la masa.</li>
+                        </ul>
+                    </li>
+                    <li>Paso 5: Enrollá como una palmera
+                        <ul>
+                            <li>Enrollá un lado de la masa hasta la mitad.</li>
+                            <li>Luego enrollá el otro lado, también hasta la mitad (como si dos rollitos se encontraran en el centro).</li>
+                            <li>Apretá un poco para que no se abra.</li>
+                        </ul>
+                    </li>
+                    <li>Paso 6: Cortá las palmeritas
+                        <ul>
+                            <li>Cortá rodajas de aproximadamente 1 o 2 cm de grosor.</li>
+                            <li>Colocalas en una bandeja con papel de horno, dejando espacio entre ellas.</li>
+                        </ul>
+                    </li>
+                    <li>Paso 7: Pintalas con huevo
+                        <ul>
+                            <li>Batí el huevo.</li>
+                            <li>Con un pincel o una cuchara, pintá la parte de arriba de cada palmera (esto les da color dorado al hornear).</li>
+                        </ul>
+                    </li>
+                    <li>Paso 8: Al horno
+                        <ul>
+                            <li>Llevá al horno durante 10 a 12 minutos, o hasta que estén doradas.</li>
+                        </ul>
+                    </li>
+                    <li>Paso 9: Cobertura de chocolate (mientas se hornean)
+                        <ul>
+                            <li>Derretí el chocolate negro en el microondas o a baño maría.</li>
+                            <li>Agregá un chorrito de leche (solo un poquito).</li>
+                            <li>Si querés, sumale 1 cucharadita de proteína y mezclá bien.</li>
+                        </ul>
+                    </li>
+                    <li>Paso 10: Decorá
+                        <ul>
+                            <li>Una vez que las palmeras están frías, poné un poquito del chocolate derretido por encima con una cuchara o manga.</li>
+                            <li>Dejales enfriar o metelas un ratito en la heladera para que el chocolate se endurezca.</li>
+                        </ul>
+                    </li>
+                </ol>
+                <p>¡Y listo! Ya tienes unos deliciosos Palmeras de chocolate fit. ¡A disfrutar!</p>
             </div>
         </section>
         <section id="pescados">
