--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CocinArteVicky&Adri</title>
     <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="icon" href="../IMG/IconoVA.png" type="image/x-icon">
 </head>
 <body>
     <header>
