--- a/HTML/index.html
+++ b/HTML/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <header>
+        <img src="../IMG/IconoVA.png" alt="">
         <h1>CocinArte Vicky&Adri</h1>
         <div class="buscador">
             <input type="text" id="search" placeholder="Buscar receta...">
